# CI285-IFP

./: Add.hs  Application.hs  Db.hs  Divide.hs  Foundation.hs  Home.hs  Main.hs  Multiply.hs  README.md  Squareof.hs  Subtract.hs  calc.cabal  client_session_key.aes  routes  test.db
