name:               calc
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          calc
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Add
                    Subtract
                    Multiply
                    Divide
                    Squareof
                    Db
                    Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                 , yesod-core
                 , sqlite-simple
                 , yesod-persistent
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , yesod-form
                 , text
                 

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
